Set up add route template and display latitude and longitude coming from model

--- a/app/templates/add.hbs
+++ b/app/templates/add.hbs
@@ -1,1 +1,7 @@
+<h1 class="add-header">ParkFreely Add a Lot!</h1>
+
+{{user-location model=model}}
+
+<button class="add-submit">Submit this lot!</button>
+
 {{outlet}}
