--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -24,3 +24,8 @@ body {
   background-color: $base-background-color;
   color: $base-font-color;
 }
+
+.map-canvas {
+        height: 500px;
+        width: 500px;
+}
