--- a/app/templates/add.hbs
+++ b/app/templates/add.hbs
@@ -1,7 +1,30 @@
 <h1 class="add-header">ParkFreely Add a Lot!</h1>
 
+<p class="add-text">Your current location is:</p>
+
+{{google-map latitude="34.851939" longitude="-82.399752"}}
+
 {{user-location model=model}}
 
-<button class="add-submit">Submit this lot!</button>
+<form class="add-form">
+  <textarea class="add-form-input add-form-description" type="text">Enter a description of this parking lot</textarea>
+  <input class="add-form-input add-form-biking"type="checkbox" name="day" value="biking"> Is this lot near biking paths?
+  <input class="add-form-input add-form-walking"type="checkbox" name="day" value="walking"> Is this lot near walking paths?
+  <input class="add-form-input add-form-publictransit"type="checkbox" name="day" value="publictransit"> Is this lot near public transit?
+  <p>Rate this lot's safety from 1 to 10</p>
+  <select name="safety">
+    <option value="1">1</option>
+    <option value="2">2</option>
+    <option value="3">3</option>
+    <option value="4">4</option>
+    <option value="5">5</option>
+    <option value="6">6</option>
+    <option value="7">7</option>
+    <option value="8">8</option>
+    <option value="9">9</option>
+    <option value="10">10</option>
+  </select>
+  <input type="submit" value="Submit this lot!">
+</form>
 
 {{outlet}}
