Create static HTML for search route template

--- a/app/templates/search.hbs
+++ b/app/templates/search.hbs
@@ -1,1 +1,23 @@
+<h1 class="header">ParkFreely Find a Lot!</h1>
+
+<p class="text">Currently community-submitted free parking lots are:</p>
+
+<ul class="lot-list">
+  <li class="lot">
+    <p class="lot-location">Location</p>
+    <p class="lot-description">Description:</p>
+    <p class="lot-biking">Near biking routes?</p>
+    <p class="lot-walking">Near walking routes?</p>
+    <p class="lot-publictransit">Near public transit?</p>
+    <p class="lot-safety">Safety Rating:</p>
+    <p class="lot-upvotes">Upvotes:</p>
+    <p class="lot-downvotes">Downvotes:</p>
+    <button class="button-vote-up">Vote this lot up!</button>
+    <button class="button-vote-down">Vote this lot down!</button>
+  </li>
+</ul>
+
+{{outlet}}
+
+
 {{outlet}}
