added changes to app.scss add.hbs and usesr-location.hbs

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -36,6 +36,7 @@ body {
   @include span-columns(8);
   @include shift(2);
   background-color: #74828F; 
+  border-radius: 5px;
   
   .header {
     text-align: center;
@@ -48,7 +49,7 @@ body {
 
 .activityList {
   @include span-columns(6);
-  @include shift(2);
+  @include shift(3);
 }
 
 .activityCheck {
@@ -70,4 +71,11 @@ body {
 
 .user-longitude {
   display: inline-block;
+}
+
+.rateIt {
+  text-align: center;
+  @include span-columns(6);
+  @include shift(3);
+  margin-bottom: 50px;
 }
