--- a/app/templates/add.hbs
+++ b/app/templates/add.hbs
@@ -20,21 +20,24 @@
       <input class="add-form-input add-form-publictransit"type="checkbox" name="day" value="publictransit"> Is this lot near public transit?
     </li>
   </ul>
-  <p>Rate this lot's safety from 1 to 10</p>
-  <select class="safety" name="safety">
-    <option value="1">1</option>
-    <option value="2">2</option>
-    <option value="3">3</option>
-    <option value="4">4</option>
-    <option value="5">5</option>
-    <option value="6">6</option>
-    <option value="7">7</option>
-    <option value="8">8</option>
-    <option value="9">9</option>
-    <option value="10">10</option>
-  </select>
-  <input type="submit" value="Submit this lot!" {{action 'submit'}}>
-</form>
+    <div class="rateIt">
+      <p>Rate this lot's safety from 1 to 10</p>
+      <select class="safety" name="safety">
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+        <option value="6">6</option>
+        <option value="7">7</option>
+        <option value="8">8</option>
+        <option value="9">9</option>
+        <option value="10">10</option>
+      </select>
+      <input type="submit" value="Submit this lot!" {{action 'submit'}}>
+   </div>   
+  </form>
+
 </section>
 
 {{outlet}}
