--- a/app/templates/components/user-location.hbs
+++ b/app/templates/components/user-location.hbs
@@ -1,4 +1,4 @@
-<p class="user-latitude">Latitude: {{model.latitude}}</p>
-<p class="user-longitude">Latitude: {{model.longitude}}</p>
+<p class="user-latitude">{{model.latitude}}</p>
+<p class="user-longitude">{{model.longitude}}</p>
 
 <div id="map"></div>
