Fix merge conflict

--- a/app/templates/search.hbs
+++ b/app/templates/search.hbs
@@ -5,6 +5,7 @@
 <ul class="lot-list">
   <li class="lot">
     <p class="lot-location">Location</p>
+    {{google-map latitude="34.851939" longitude="-82.399752"}}
     <p class="lot-description">Description:</p>
     <p class="lot-biking">Near biking routes?</p>
     <p class="lot-walking">Near walking routes?</p>
