Added some more styling changes

--- a/app/templates/add.hbs
+++ b/app/templates/add.hbs
@@ -1,5 +1,6 @@
 <section class="addContainer">
-<h1 class="header">ParkFreely Add a Lot!</h1>
+<img class="smallLogo" src="./assets/LogoSmall.png">
+<h1 class="header">Add a Lot!</h1>
 <div class="map">
 <p class="add-text">Your current location is:</p>
 
