--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -22,7 +22,12 @@ $base-background-color: $very-light-gray;
 body {
   font-family: $base-font-family;
   background-color: #525564;
-  color: #364CA8;
+  color: $base-background-color;
+}
+
+.smallLogo {
+  margin-left: 215px;
+  margin-bottom: -25px
 }
 
 .map-canvas {
@@ -37,6 +42,7 @@ body {
   @include shift(2);
   background-color: #74828F; 
   border-radius: 5px;
+  color: #364CA8;
   
   .header {
     text-align: center;
