--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -6,6 +6,10 @@
 	box-sizing: border-box;
 }
 
+a {
+	text-decoration: none;
+}
+
 // Typography
 $base-font-family: $helvetica;
 
@@ -26,8 +30,10 @@ body {
 }
 
 .smallLogo {
-  margin-left: 215px;
-  margin-bottom: -25px
+  margin-bottom: -25px;
+	display:block;
+  margin-left:auto;
+  margin-right:auto;
 }
 
 .map-canvas {
@@ -43,9 +49,11 @@ body {
   background-color: #74828F;
   border-radius: 5px;
   color: #364CA8;
+	padding: 25px;
 
   .header {
     text-align: center;
+		color: $very-light-gray;
   }
 
   .map {
@@ -70,6 +78,11 @@ body {
   border-radius: 5px;
 }
 
+.mission-statement,
+.index-text {
+	text-align: center;
+}
+
 .user-latitude {
   display: inline-block;
   margin: 20px;
@@ -84,4 +97,12 @@ body {
   @include span-columns(6);
   @include shift(3);
   margin-bottom: 50px;
+}
+
+.index-button-searchroute {
+	float: right;
+}
+
+button {
+  @include button;
 }
