--- a/app/templates/add.hbs
+++ b/app/templates/add.hbs
@@ -1,26 +1,26 @@
-<section class="addContainer">
-<img class="smallLogo" src="./assets/LogoSmall.png">
-<h1 class="header">Add a Lot!</h1>
-<div class="map">
-<p class="add-text">Your current location is:</p>
+<div class="addContainer">
+  <img class="smallLogo" src="./assets/LogoSmall.png">
+  <h1 class="header">Add a Lot!</h1>
+  <div class="map">
+    <p class="add-text">Your current location is:</p>
 
-{{google-map latitude=model.latitude longitude=model.longitude}}
+    {{google-map latitude=model.latitude longitude=model.longitude}}
 
-{{user-location model=model}}
-</div>
-<form class="add-form">
-  <textarea class="add-form-input add-form-description" type="text">Enter a description of this parking lot</textarea>
-  <ul class="activityList">
-    <li class="activityCheck">
-      <input class="add-form-input add-form-biking"type="checkbox" name="day" value="biking"> Is this lot near biking paths?
-    </li>
-    <li class="activityCheck">
-      <input class="add-form-input add-form-walking"type="checkbox" name="day" value="walking"> Is this lot near walking paths?
-    </li>
-    <li class="activityCheck">
-      <input class="add-form-input add-form-publictransit"type="checkbox" name="day" value="publictransit"> Is this lot near public transit?
-    </li>
-  </ul>
+    {{user-location model=model}}
+  </div>
+  <form class="add-form">
+    <textarea class="add-form-input add-form-description" type="text">Enter a description of this parking lot</textarea>
+    <ul class="activityList">
+      <li class="activityCheck">
+        <input class="add-form-input add-form-biking"type="checkbox" name="day" value="biking"> Is this lot near biking paths?
+      </li>
+      <li class="activityCheck">
+        <input class="add-form-input add-form-walking"type="checkbox" name="day" value="walking"> Is this lot near walking paths?
+      </li>
+      <li class="activityCheck">
+        <input class="add-form-input add-form-publictransit"type="checkbox" name="day" value="publictransit"> Is this lot near public transit?
+      </li>
+    </ul>
     <div class="rateIt">
       <p>Rate this lot's safety from 1 to 10</p>
       <select class="safety" name="safety">
@@ -36,9 +36,8 @@
         <option value="10">10</option>
       </select>
       <input type="submit" value="Submit this lot!" {{action 'submit'}}>
-   </div>
+    </div>
   </form>
-
-</section>
+</div>
 
 {{outlet}}
