--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -61,14 +61,22 @@ body {
   }
 }
 
+.activity-container {
+	margin: 0 auto;
+}
+
 .activityList {
-  @include span-columns(6);
-  @include shift(3);
+	margin: 0 auto;
+	margin-bottom: 50px;
 }
 
 .activityCheck {
-  list-style-type: none;
+	position: relative;
+	left: 25%;
+	list-style-position: none;
+	font-size: 1.2em;
 }
+
 
 .add-form-description {
   margin: 0 auto;
@@ -76,6 +84,7 @@ body {
   height: 100px;
   display: block;
   border-radius: 5px;
+	font-size: 1em;
 }
 
 .mission-statement,
@@ -103,6 +112,7 @@ body {
 	float: right;
 }
 
-button {
+button,
+.add-form-submit {
   @include button;
 }
