--- a/app/templates/add.hbs
+++ b/app/templates/add.hbs
@@ -9,18 +9,20 @@
     {{user-location model=model}}
   </div>
   <form class="add-form">
-    <textarea class="add-form-input add-form-description" type="text">Enter a description of this parking lot</textarea>
-    <ul class="activityList">
-      <li class="activityCheck">
-        <input class="add-form-input add-form-biking"type="checkbox" name="day" value="biking"> Is this lot near biking paths?
-      </li>
-      <li class="activityCheck">
-        <input class="add-form-input add-form-walking"type="checkbox" name="day" value="walking"> Is this lot near walking paths?
-      </li>
-      <li class="activityCheck">
-        <input class="add-form-input add-form-publictransit"type="checkbox" name="day" value="publictransit"> Is this lot near public transit?
-      </li>
-    </ul>
+    <textarea class="add-form-input add-form-description" type="text" placeholder="Enter a description of this parking lot"></textarea>
+    <div class="activity-container">
+      <ul class="activityList">
+        <li class="activityCheck">
+          <input class="add-form-input add-form-biking"type="checkbox" name="day" value="biking">Is this lot near biking paths?
+        </li>
+        <li class="activityCheck">
+          <input class="add-form-input add-form-walking"type="checkbox" name="day" value="walking"> Is this lot near walking paths?
+        </li>
+        <li class="activityCheck">
+          <input class="add-form-input add-form-publictransit"type="checkbox" name="day" value="publictransit"> Is this lot near public transit?
+        </li>
+      </ul>
+    </div>
     <div class="rateIt">
       <p>Rate this lot's safety from 1 to 10</p>
       <select class="safety" name="safety">
@@ -35,7 +37,7 @@
         <option value="9">9</option>
         <option value="10">10</option>
       </select>
-      <input type="submit" value="Submit this lot!" {{action 'submit'}}>
+      <input  class="add-form-submit" type="submit" value="Submit this lot!" {{action 'submit'}}>
     </div>
   </form>
 </div>
