--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -4,15 +4,14 @@
 
   <h1 class="header">Welcome to Parkfreely</h1>
 
-  <h2 class="mission-statement">Parkfreely is a community-focused project that provides citizens of Greenville, SC the ability to share free parking lots and areas on the outskirts of downtown Greenville, with a focus on areas that are accessible to local walk/run routes, bicycle routes, proximity to public transportation, and safety.  If you know of a parking space that is useful and allows you to avoid the traffic and congestion of downtown, and hopefully allows you to also enjoy outdoor activity and/or use Greenville's expanding metro transit system, please share it with others to help out! </h2>
+  <h2 class="mission-statement">Parkfreely is a community-focused project that provides citizens of Greenville, SC the ability to share the location of free parking lots and parking areas on the outskirts of downtown Greenville, with a focus on areas that are accessible to local walk/run routes, bicycle routes, proximity to public transportation, and safety.  If you know of a place to park that is useful and allows you to avoid the traffic and congestion of downtown, and hopefully allows you to also enjoy outdoor activity and/or use Greenville's expanding metro transit system, please share it with others to help out! </h2>
 
-
-  <h3 class="index-text">Choose below if you'd like to to add a new free parking lot, or search our existing crowdsourced database of free parking lots.</h3>
+  <h3 class="index-text">Choose below if you'd like to to add a new free parking area, or view our existing crowdsourced database of free parking areas.</h3>
   {{#link-to 'add'}}
-    <button class=" index-button index-button-addroute">Add a Lot</button>
+    <button class="index-button index-button-addroute">Add a Lot</button>
   {{/link-to}}
   {{#link-to 'search'}}
-  <button class="index-button index-button-searchroute">Search User-Submitted Lots</button>
+  <button class="index-button index-button-viewroute">View User-Submitted Lots</button>
   {{/link-to}}
 </div>
 {{outlet}}
