--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -7,11 +7,11 @@
   <h2 class="mission-statement">Parkfreely is a community-focused project that provides citizens of Greenville, SC the ability to share the location of free parking lots and parking areas on the outskirts of downtown Greenville, with a focus on areas that are accessible to local walk/run routes, bicycle routes, proximity to public transportation, and safety.  If you know of a place to park that is useful and allows you to avoid the traffic and congestion of downtown, and hopefully allows you to also enjoy outdoor activity and/or use Greenville's expanding metro transit system, please share it with others to help out! </h2>
 
   <h3 class="index-text">Choose below if you'd like to to add a new free parking area, or view our existing crowdsourced database of free parking areas.</h3>
-  {{#link-to 'add'}}
+  {{#link-to 'lots.create'}}
     <button class="index-button index-button-addroute">Add a Lot</button>
   {{/link-to}}
-  {{#link-to 'search'}}
-  <button class="index-button index-button-viewroute">View User-Submitted Lots</button>
+  {{#link-to 'lots.index'}}
+  <button class="index-button index-button-searchroute">View User-Submitted Lots</button>
   {{/link-to}}
 </div>
 {{outlet}}
