Render leaflet-map component to page Modify leaflet-src.js in bower_components to reflect correct L.Icon.Default path: https://github.com/Leaflet/Leaflet/issues/766 Add leaflet images folder to assets directory

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -43,6 +43,10 @@ body {
   border-radius: 5px;
 }
 
+#lots-create-map {
+	height: 180px;
+}
+
 .addContainer {
   @include span-columns(8);
   @include shift(2);
