Generate lot model

--- a/app/templates/lots/create.hbs
+++ b/app/templates/lots/create.hbs
@@ -3,7 +3,9 @@
   <h1 class="header">Add a Lot!</h1>
   <div class="map">
     <p class="add-text">Your current location is:</p>
-    {{leaflet-map}}
+
+    {{google-map latitude=model.latitude longitude=model.longitude}}
+
   </div>
   <form class="add-form">
     <textarea class="add-form-input add-form-description" type="text" placeholder="Enter a description of this parking lot"></textarea>
