--- a/app/templates/components/lots-create.hbs
+++ b/app/templates/components/lots-create.hbs
@@ -1,1 +1,32 @@
+{{textarea class="add-form-input add-form-description" placeholder="Enter a description of this parking lot" value=model.description}}
+<div class="activity-container">
+  <ul class="activityList">
+    <li class="activityCheck">
+      {{input class="add-form-input add-form-biking"type="checkbox" name="day" value=model.biking}}<strong>Is this lot near biking paths?</strong>
+    </li>
+    <li class="activityCheck">
+      {{input class="add-form-input add-form-walking"type="checkbox" name="day" value=model.walking}}<strong>Is this lot near walking paths?</strong>
+    </li>
+    <li class="activityCheck">
+      {{input class="add-form-input add-form-publictransit"type="checkbox" name="day" value=model.publictransit}}<strong>Is this lot near public transit?</strong>
+    </li>
+  </ul>
+</div>
+{{view "select" classNames="rateIt" content=safetyNumbers value=safety prompt="Rate this lot's safety from 1 to 10:"}}
+{{!-- <div class="rateIt">
+  <p></p>
+  <select class="safety" name="safety">
+    <option value="1">1</option>
+    <option value="2">2</option>
+    <option value="3">3</option>
+    <option value="4">4</option>
+    <option value="5">5</option>
+    <option value="6">6</option>
+    <option value="7">7</option>
+    <option value="8">8</option>
+    <option value="9">9</option>
+    <option value="10">10</option>
+  </select>
+  <input  class="add-form-submit" type="submit" value="Submit this lot!" {{action 'submit'}}>
+</div> --}}
 {{yield}}
