Adjust CSS layout for select view helper

--- a/app/templates/lots/create.hbs
+++ b/app/templates/lots/create.hbs
@@ -5,7 +5,7 @@
     <p class="add-text">Your current location is:</p>
     {{leaflet-map}}
   </div>
-  
+    {{lots-create lot=model}}
 </div>
 
 {{outlet}}
