--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -69,16 +69,17 @@ body {
 	margin: 0 auto;
 }
 
-.activityList {
+.activity-list {
 	margin: 0 auto;
 	margin-bottom: 50px;
 }
 
-.activityCheck {
+.activity-check {
 	position: relative;
 	left: 25%;
 	list-style-position: none;
 	font-size: 1.2em;
+	font-weight: bold;
 }
 
 
@@ -106,10 +107,8 @@ body {
 }
 
 .rateIt {
-  text-align: center;
-  @include span-columns(6);
-  @include shift(3);
-  margin-bottom: 50px;
+	display: block;
+	margin: 0 auto 50px auto;
 }
 
 .index-button-searchroute {
