--- a/app/templates/components/lots-create.hbs
+++ b/app/templates/components/lots-create.hbs
@@ -1,18 +1,19 @@
 {{textarea class="add-form-input add-form-description" placeholder="Enter a description of this parking lot" value=model.description}}
 <div class="activity-container">
-  <ul class="activityList">
-    <li class="activityCheck">
-      {{input class="add-form-input add-form-biking"type="checkbox" name="day" value=model.biking}}<strong>Is this lot near biking paths?</strong>
+  <ul class="activity-list">
+    <li class="activity-check">
+      {{input class="add-form-input add-form-biking"type="checkbox" checked=lot.biking}}<strong>Is this lot near biking paths?</strong>
     </li>
-    <li class="activityCheck">
-      {{input class="add-form-input add-form-walking"type="checkbox" name="day" value=model.walking}}<strong>Is this lot near walking paths?</strong>
+    <li class="activity-check">
+      {{input class="add-form-input add-form-walking"type="checkbox" checked=lot.walking}}<strong>Is this lot near walking paths?</strong>
     </li>
-    <li class="activityCheck">
-      {{input class="add-form-input add-form-publictransit"type="checkbox" name="day" value=model.publictransit}}<strong>Is this lot near public transit?</strong>
+    <li class="activity-check">
+      {{input class="add-form-input add-form-publictransit" type="checkbox" checked=lot.publictransit}}<strong>Is this lot near public transit?</strong>
     </li>
   </ul>
 </div>
-{{view "select" classNames="rateIt" content=safetyNumbers value=safety prompt="Rate this lot's safety from 1 to 10:"}}
+<p class="activity-check">Rate this lot's safety from 1 to 10:</p>
+{{view "select" classNames="rateIt" content=safetyNumbers value=safety}}
 {{!-- <div class="rateIt">
   <p></p>
   <select class="safety" name="safety">
