Use Google Maps Geocoding API call to display street & city address in lots-create map

--- a/app/templates/components/lots-create.hbs
+++ b/app/templates/components/lots-create.hbs
@@ -1,14 +1,14 @@
-{{textarea class="add-form-input add-form-description" placeholder="Enter a description of this parking lot" value=lot.description}}
+{{textarea class="add-form-input add-form-description" placeholder="Enter a description of this parking area" value=lot.description}}
 <div class="activity-container">
   <ul class="activity-list">
     <li class="activity-check">
-      {{input class="add-form-input add-form-biking"type="checkbox" checked=lot.biking}}<strong>Is this lot near biking paths?</strong>
+      {{input class="add-form-input add-form-biking"type="checkbox" checked=lot.biking}}<strong>Is this parking area near biking paths?</strong>
     </li>
     <li class="activity-check">
-      {{input class="add-form-input add-form-walking"type="checkbox" checked=lot.walking}}<strong>Is this lot near walking paths?</strong>
+      {{input class="add-form-input add-form-walking"type="checkbox" checked=lot.walking}}<strong>Is this parking area near walking paths?</strong>
     </li>
     <li class="activity-check">
-      {{input class="add-form-input add-form-publictransit" type="checkbox" checked=lot.publictransit}}<strong>Is this lot near public transit?</strong>
+      {{input class="add-form-input add-form-publictransit" type="checkbox" checked=lot.publictransit}}<strong>Is this parking area near public transit?</strong>
     </li>
   </ul>
 </div>
