--- a/app/templates/lots/create.hbs
+++ b/app/templates/lots/create.hbs
@@ -1,6 +1,6 @@
 <div class="addContainer">
   <img class="smallLogo" src="./assets/LogoSmall.png">
-  <h1 class="header">Add a Lot!</h1>
+  <h1 class="header">Add a Free Parking Area!</h1>
   <div class="map">
     <p class="add-text">Your current location is:</p>
     {{leaflet-map lot=model}}
