--- a/app/templates/lots/index.hbs
+++ b/app/templates/lots/index.hbs
@@ -3,19 +3,20 @@
 <p class="text">Currently community-submitted free parking lots are:</p>
 
 <ul class="lot-list">
+  {{#each model as |lot|}}
   <li class="lot">
-    <p class="lot-location">Location</p>
-    {{google-map latitude="34.851939" longitude="-82.399752"}}
-    <p class="lot-description">Description:</p>
-    <p class="lot-biking">Near biking routes?</p>
-    <p class="lot-walking">Near walking routes?</p>
-    <p class="lot-publictransit">Near public transit?</p>
-    <p class="lot-safety">Safety Rating:</p>
+    <p class="lot-location">Location: {{lot.location}}</p>
+    <p class="lot-description">Description: {{lot.description}}</p>
+    <p class="lot-biking">Near biking routes? {{lot.biking}}</p>
+    <p class="lot-walking">Near walking routes? {{lot.walking}}</p>
+    <p class="lot-publictransit">Near public transit? {{lot.publictransit}}</p>
+    <p class="lot-safety">Safety Rating: {{lot.safety}}</p>
     <p class="lot-upvotes">Upvotes:</p>
     <p class="lot-downvotes">Downvotes:</p>
     <button class="button-vote-up">Vote this lot up!</button>
     <button class="button-vote-down">Vote this lot down!</button>
   </li>
+  {{/each}}
 </ul>
 
 {{outlet}}
