--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -2,16 +2,22 @@
 
   <img class="smallLogo" src="./assets/LogoSmall.png">
 
-  <h1 class="header">Welcome to Parkfreely</h1>
+  <h1 class="header">Our mission:</h1>
 
-  <h2 class="mission-statement">Parkfreely is a community-focused project that provides citizens of Greenville, SC the ability to share the location of free parking lots and parking areas on the outskirts of downtown Greenville, with a focus on areas that are accessible to local walk/run routes, bicycle routes, proximity to public transportation, and safety.  If you know of a place to park that is useful and allows you to avoid the traffic and congestion of downtown, and hopefully allows you to also enjoy outdoor activity and/or use Greenville's expanding metro transit system, please share it with others to help out! </h2>
+  <p class="mission-statement">Parkfreely is a community-crowdsourced project that lets citizens of Greenville, SC share the location of free parking lots and parking areas on the outskirts of downtown Greenville, with a focus on safe areas to park that are near:</p>
+  <ul class="mission-statement mission-statement-list">
+    <li>&bull; Local walk/run routes</li>
+    <li>&bull; Bicycle routes</li>
+    <li>&bull; Public Transportation</li>
+  </ul>
 
-  <h3 class="index-text">Choose below if you'd like to to add a new free parking area, or view our existing crowdsourced database of free parking areas.</h3>
+  <p class="mission-statement">If you know of a useful place to park that allows you to avoid the traffic and congestion of downtown, and allows you to enjoy outdoor activity and/or use Greenville's expanding metro transit system, please share it with others to help out! </p>
+
   {{#link-to 'lots.create'}}
     <button class="index-button index-button-addroute">Add a Lot</button>
   {{/link-to}}
   {{#link-to 'lots.index'}}
-  <button class="index-button index-button-searchroute">View User-Submitted Lots</button>
+  <button class="index-button index-button-searchroute">View Lots</button>
   {{/link-to}}
 </div>
 {{outlet}}
