--- a/app/templates/components/lots-create.hbs
+++ b/app/templates/components/lots-create.hbs
@@ -12,7 +12,7 @@
     </li>
   </ul>
 </div>
-<p class="activity-check">Rate this lot's safety from 1 to 10:</p>
+<span class="activity-check">Rate this lot's safety from 1 to 10:</span>
 {{view "select" classNames="rateIt" content=safetyNumbers value=lot.safety}}
 <button class="add-form-submit" {{action "sendLotRating"}}>Submit this parking area!</button>
 
