--- a/app/templates/lots/create.hbs
+++ b/app/templates/lots/create.hbs
@@ -1,5 +1,7 @@
 <div class="addContainer">
-  <img class="smallLogo" src="./assets/LogoSmall.png">
+  <div class="image-container">
+    <img class="smallLogo" src="./assets/LogoSmall.png">
+  </div>
   <h1 class="header">Add a Free Parking Area!</h1>
     <p class="add-text">Your current location is:</p>
     {{leaflet-map lot=model}}
