--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,6 +1,8 @@
 <div class="addContainer">
 
-  <img class="smallLogo" src="./assets/LogoSmall.png">
+  <div class="image-container">
+    <img class="smallLogo" src="./assets/LogoSmall.png">
+  </div>
 
   <h1 class="header">Our mission:</h1>
 
