--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,7 +1,7 @@
-<div class="addContainer">
+<div class="outer-grid-container">
 
   <div class="image-container">
-    <img class="smallLogo" src="./assets/LogoSmall.png">
+    <img class="small-logo" src="./assets/LogoSmall.png">
   </div>
 
   <h1 class="header">Our mission:</h1>
