--- a/app/templates/lots/create.hbs
+++ b/app/templates/lots/create.hbs
@@ -1,6 +1,6 @@
-<div class="addContainer">
+<div class="outer-grid-container">
   <div class="image-container">
-    <img class="smallLogo" src="./assets/LogoSmall.png">
+    <img class="small-logo" src="./assets/LogoSmall.png">
   </div>
   <h1 class="header">Add a Free Parking Area!</h1>
     <p class="add-text">Your current location is:</p>
