--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -17,6 +17,7 @@ a {
 
 // Typography
 $base-font-family: $helvetica;
+$cantarell: 'Cantarell', sans-serif;
 
 // Colors
 $blue: #477dca;
@@ -47,8 +48,7 @@ body {
     text-align: center;
 		color: $parkfreely-blue;
 		font-size: 1.5em;
-		font-family: monospace;
-		font-style: italic;
+		font-family: $cantarell;
   }
 
 	.text {
@@ -86,6 +86,7 @@ Index Page
 
 .mission-statement-list {
 	color: $parkfreely-blue;
+	font-family: $cantarell;
 	list-style: none;
 	font-weight: bold;
 }
