--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -8,9 +8,9 @@
 
   <p class="mission-statement">Parkfreely is a community-crowdsourced project that lets citizens of Greenville, SC share the location of free parking lots and parking areas on the outskirts of downtown Greenville, with a focus on safe areas to park that are near:</p>
   <ul class="mission-statement mission-statement-list">
-    <li>&bull; Local walk/run routes</li>
-    <li>&bull; Bicycle routes</li>
-    <li>&bull; Public Transportation</li>
+    <li class="mission-bullets">&bull; Local walk/run routes</li>
+    <li class="mission-bullets">&bull; Bicycle routes</li>
+    <li class="mission-bullets">&bull; Public Transportation</li>
   </ul>
 
   <p class="mission-statement">If you know of a useful place to park that allows you to avoid the traffic and congestion of downtown, and allows you to enjoy outdoor activity and/or use Greenville's expanding metro transit system, please share it with others to help out! </p>
