Add drop shadows to maps

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,7 +1,7 @@
 <div class="outer-grid-container">
 
   <div class="image-container">
-    <img class="small-logo" src="./assets/LogoSmall.png">
+    {{#link-to 'index'}}<img class="small-logo" src="./assets/LogoSmall.png">{{/link-to}}
   </div>
 
   <h1 class="header">Our mission:</h1>
