--- a/app/templates/lots/index.hbs
+++ b/app/templates/lots/index.hbs
@@ -1,11 +1,11 @@
 <div class="outer-grid-container">
   <div class="image-container">
-    <img class="small-logo" src="./assets/LogoSmall.png">
+    {{#link-to 'index'}}<img class="small-logo" src="./assets/LogoSmall.png">{{/link-to}}
   </div>
 
   <h1 class="header">Find a Free Parking Area!</h1>
 
-  <p class="text">Currently community-submitted free parking lots are:</p>
+  <p class="text">Currently community-submitted free parking areas:</p>
   {{lots-show lots=model}}
 </div>
 
