--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -44,6 +44,9 @@ body {
   border-radius: 5px;
   color: $parkfreely-blue;
 	padding: 2em;
+	-webkit-box-shadow: 0 0px 3px 1px #364CA8;
+       -moz-box-shadow: 0 0px 3px 1px #364CA8;
+            box-shadow: 0 0px 3px 1px #364CA8;
 
   .header {
     text-align: center;
@@ -114,6 +117,9 @@ Lots-Create Page
 	height: 180px;
 	margin-bottom: 1em;
 	border: 1px solid $parkfreely-blue;
+	-webkit-box-shadow: 0 1px 4px #999;
+       -moz-box-shadow: 0 1px 4px #999;
+            box-shadow: 0 1px 4px #999;
 }
 
 .activity-container {
@@ -169,6 +175,9 @@ Lots-Show Page
 .lots-index-map {
 	height: 180px;
 	color: #364CA8;
+	-webkit-box-shadow: 0 1px 4px #999;
+       -moz-box-shadow: 0 1px 4px #999;
+            box-shadow: 0 1px 4px #999;
 }
 
 .lot-list {
