Add new properties on lot model and reference them in lots-show component

--- a/app/templates/components/lots-show.hbs
+++ b/app/templates/components/lots-show.hbs
@@ -8,8 +8,8 @@
     <p class="lot-text lot-walking"><b>Near walking routes?</b> {{lot.walkingShow}}</p>
     <p class="lot-text lot-publictransit"><b>Near public transit?</b> {{lot.publicTransitShow}}</p>
     <p class="lot-text lot-safety"><b>Safety Rating:</b> {{lot.safety}}</p>
-    <p class="lot-text lot-upvotes"><b>Upvotes:</b></p>
-    <p class="lot-text lot-downvotes"><b>Downvotes:</b></p>
+    <p class="lot-text lot-upvotes"><b>Upvotes:</b> {{lot.upvotes}}</p>
+    <p class="lot-text lot-downvotes"><b>Downvotes:</b> {{lot.downvotes}}</p>
     <div class="lot-vote-container">
       <button class="button-vote-up">Vote this lot up!</button>
       <button class="button-vote-down">Vote this lot down!</button>
