--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,6 +1,7 @@
 @import 'bower_components/bourbon/app/assets/stylesheets/bourbon';
 //$gutter: 0em;
 @import 'bower_components/neat/app/assets/stylesheets/neat';
+@import 'bower_components/Leaflet.loading/src/Control.Loading';
 
 
 /*=====================================
