--- a/app/templates/lots/index.hbs
+++ b/app/templates/lots/index.hbs
@@ -6,7 +6,7 @@
   <h1 class="header">Find a Free Parking Area!</h1>
 
   <p class="text">Currently community-submitted free parking areas:</p>
-  {{lots-show lots=model}}
+  {{lots-show lots=model addUpVote="addUpVote" addDownVote="addDownVote"}}
 </div>
 
 {{outlet}}
