--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -202,3 +202,9 @@ Lots-Show Page
 	text-align: center;
 	margin-bottom: 0.5em;
 }
+
+.voted-text {
+	text-align: center;
+	font-family: $cantarell;
+	font-weight: bold;
+}
