--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,3 +1,5 @@
+@import 'bower_components/font-awesome/scss/font-awesome';
+@import 'bower_components/leaflet-awesome-markers/dist/leaflet.awesome-markers';
 @import 'bower_components/bourbon/app/assets/stylesheets/bourbon';
 //$gutter: 0em;
 @import 'bower_components/neat/app/assets/stylesheets/neat';
